scss/components/_button-group.scss
.c-button-group {
	position: relative;
	display: flex;
	flex-wrap: wrap;
	align-items: stretch;

	.c-button {
		margin: 0;

		&:not(:last-child) {
			margin-right: -1px;
			border-top-right-radius: 0;
			border-bottom-right-radius: 0;
		}

		&:not(:first-child) {
			margin-left: -1px;
			border-top-left-radius: 0;
			border-bottom-left-radius: 0;
		}
	}
}

